Archive2/8e/6abc3e905484d8/output
main.cpp:9:23: error: call to implicitly-deleted default constructor of 'decltype(gen_lam)' (aka '(lambda at main.cpp:6:20)')
    decltype(gen_lam) gen_lam2;
                      ^
main.cpp:6:20: note: lambda expression begins here
    auto gen_lam = [=]() mutable -> int {return ++i;};
                   ^
1 error generated.
